Fix LiveOak logo in login form to be aligned to the right

--- a/modules/keycloak/src/main/resources/theme/login/liveoak/resources/css/login.css
+++ b/modules/keycloak/src/main/resources/theme/login/liveoak/resources/css/login.css
@@ -45,6 +45,7 @@
 
 .login-pf #kc-logo-wrapper {
     background-image: none;
+    text-align: right;
 }
 
 .login-pf #kc-logo-wrapper:before {
